Added some documentation on the approach.